MB-7893: Add a "catch-all" clause for file io exceptions

On SmartOS the exception thrown isn't a const &, causing the
catch to fail (and dump core). This patch work around this
problem by adding a "catch all" clause at the end.

Change-Id: I98e1cb3d298a26e0aa2ee29c28bb6eef4381698c
Reviewed-on: http://review.couchbase.org/25087
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>